<resources>
    <string name="app_name">Expense Tracking System</string>
    <string name="username">Username</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="retypepassword">Retype Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="signmeup">Sign me up!</string>
    <string name="amount_hint">Amount</string>

    <!--  Error messages  -->
    <string name="username_required_err_msg">Username is Required</string>
    <string name="password_required_err_msg">Password is Required</string>
    <string name="retypepassword_required_err_msg">Retype Password is Required</string>
    <string name="email_required_err_msg">Email is Required</string>
    <string name="phone_required_err_msg">Phone is Required</string>

    <string name="username_format_err_msg">Only alphabetic characters are allowed</string>
    <string name="email_format_err_msg">Enter a valid email</string>
    <string name="phone_format_err_msg">Enter a valid phone number</string>

    <string name="already_exist_username_err_msg">User already exists</string>
    <string name="different_passwords_err_msg">Password and retype password are not matched</string>
    <string name="welcome">Welcome Username!</string>
    <string name="title_activity_welcome_screen">Welcome Screen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="companyName">Expense Tracking System</string>
    <string name="about">About</string>
    <string name="aboutCompany">Expense Tracker is an application that will calculate the daily expenses and annual saving amount of a user based on the inputted annual income, desired saving goal, and maximum daily expenses. The amount of savings a user has available will be automatically adjusted whenever a user either under or over the desired goal. The application will generate a desired report that the user chooses. The types of reports available will be Daily Expenses report, Daily Savings report, or a Specific Item report.</string>
    <string name="helpCenter">Help Center</string>
    <string name="helpQuestion">Hello, how can we help?</string>
    <string name="askQuestion">Ask a question...</string>
    <string name="btnSubmit">Submit</string>
    <string name="title_activity_settings">Settings Activity</string>

    <!-- Preference Titles -->
    <string name="user_info_header">Info</string>
    <string name="expense_types_header">Expense Types</string>

    <!-- Info Preferences -->
    <string name="annual_income_title">Annual Income</string>
    <string name="max_daily_expense_title">Max Daily Expense</string>
    <string name="saving_goal_title">Saving Goal</string>

    <!-- Expense Types Preferences -->
    <string name="add_expense_type_title">New Expense Type</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="back">Back</string>
    <string name="expense_list">Expense List</string>
    <string name="data_entry">Data Entry</string>
    <string name="daily_expenses">Daily Expenses</string>
    <string name="daily_savings">Daily Savings</string>
    <string name="btnNew">New</string>
    <string name="btnBack">Back</string>
    <string name="expense">Expenses</string>
    <string name="savings">Savings</string>
    <string name="itemName">The Item</string>

    <!-- Itemized Report -->
    <string name="itemized_report">Itemized Report</string>
    <string name="txtDateFrom">From</string>
    <string name="txtDateTo">To</string>
    <string name="txtDefaultFrom">06/01/2021</string>
    <string name="txtDefaultTo">07/01/2021</string>
    <string name="generate">Generate</string>
</resources>