<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item android:title="Reports">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_daily_expenses"
                android:icon="@drawable/ic_baseline_money_off_24"
                android:title="@string/daily_expenses"/>

            <item
                android:id="@+id/nav_daily_savings"
                android:icon="@drawable/ic_baseline_attach_money_24"
                android:title="@string/daily_savings"/>

            <item
                android:id="@+id/nav_itemized_report"
                android:icon="@drawable/ic_baseline_list_24"
                android:title="@string/itemized_list"/>
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_search" />

        <item
            android:id="@+id/nav_data_entry"
            android:icon="@drawable/ic_baseline_computer_24"
            android:title="@string/data_entry" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:title="@string/helpCenter" />
    </group>

</menu>