<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_search">

    <fragment
        android:id="@+id/nav_itemized_report"
        android:name="com.example.expensetrackingsystem.ui.reports.ItemizedReportFragment"
        android:label="@string/itemized_list"
        tools:layout="@layout/fragment_itemized_report" />
    <fragment
        android:id="@+id/nav_daily_savings"
        android:name="com.example.expensetrackingsystem.ui.reports.DailySavingsFragment"
        android:label="@string/daily_savings"
        tools:layout="@layout/fragment_daily_savings" />
    <fragment
        android:id="@+id/nav_daily_expenses"
        android:name="com.example.expensetrackingsystem.ui.reports.DailyExpensesFragment"
        android:label="@string/daily_expenses"
        tools:layout="@layout/fragment_daily_expenses" />
    <fragment
        android:id="@+id/nav_data_entry"
        android:name="com.example.expensetrackingsystem.ui.data_entry.DataEntryFragment"
        android:label="@string/data_entry"
        tools:layout="@layout/fragment_data_entry" />
    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.expensetrackingsystem.ui.search.SearchFragment"
        android:label="@string/menu_search" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.expensetrackingsystem.ui.about.AboutUs"
        android:label="@string/about"
        tools:layout="@layout/fragment_about_us" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.expensetrackingsystem.ui.help.HelpCenter"
        android:label="@string/helpCenter"
        tools:layout="@layout/fragment_help_center" />
</navigation>