<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ui.reports.ItemizedReportFragment">

    <com.anychart.AnyChartView
        android:id="@+id/itemizedReportChart"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="15dp"
        android:background="@color/lightTeal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnItemizedReport"
        app:layout_constraintVertical_bias="0.151" />

    <EditText
        android:id="@+id/txtDateFrom"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_margin="25dp"
        android:hint="@string/txtDateFrom"
        android:inputType="date"
        android:text="@string/txtDefaultFrom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtDateTo"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/txtDateTo"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_margin="25dp"
        android:hint="@string/txtDateTo"
        android:inputType="date"
        android:text="@string/txtDefaultTo"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/btnItemizedReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="Go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDateFrom"
        app:layout_constraintVertical_bias="0"/>

</androidx.constraintlayout.widget.ConstraintLayout>